--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,21 @@
 name = "Schwinger"
 uuid = "085a87bc-4ab7-4abb-a9ba-31d0565e739e"
-authors = ["Ross Dempsey\n <sdempsey@princeton.edu>"]
+authors = ["""Ross Dempsey\n <sdempsey@princeton.edu>"""]
 version = "0.1.0"
 
 [deps]
+Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
+Arpack = "0.5.4"
+Combinatorics = "1.0.2"
+LinearAlgebra = "1.11.0"
+SparseArrays = "1.11.0"
 julia = "1.7"
