--- a/Project.toml
+++ b/Project.toml
@@ -17,5 +17,5 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Arpack = "0.5.4"
 Combinatorics = "1.0.2"
 LinearAlgebra = "1.11.0"
-SparseArrays = "1.11.0"
+SparseArrays = "^1.7"
 julia = "1.7"
