--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,6 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 [compat]
 Arpack = "0.5.4"
 Combinatorics = "1.0.2"
-LinearAlgebra = "1.11.0"
+LinearAlgebra = "^1.7"
 SparseArrays = "^1.7"
 julia = "1.7"
