--- a/Project.toml
+++ b/Project.toml
@@ -14,8 +14,8 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-Arpack = "0.5.4"
-Combinatorics = "1.0.2"
-LinearAlgebra = "^1.7"
-SparseArrays = "^1.7"
-julia = "1.8"
+Arpack = "^0.5"
+Combinatorics = "^1.0"
+LinearAlgebra = "^1.9"
+SparseArrays = "^1.9"
+julia = "1.9"
