--- a/Project.toml
+++ b/Project.toml
@@ -17,5 +17,6 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Arpack = "^0.5"
 Combinatorics = "^1.0"
 LinearAlgebra = "^1.8"
+Parameters = "0.12"
 SparseArrays = "^1.8"
 julia = "1.9"
