--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-Arpack = "^0.5"
+Arpack = "0.5.3"
 Combinatorics = "^1.0"
 ITensors = "^0.6"
 ITensorMPS = "^0.2"
