CompatHelper: bump compat for KrylovKit to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ Arpack = "0.5.3"
 Combinatorics = "^1.0"
 ITensorMPS = "^0.2"
 ITensors = "^0.6"
-KrylovKit = "0.8.3"
+KrylovKit = "0.8.3, 0.9"
 LinearAlgebra = "^1.8"
 Parameters = "0.12"
 SparseArrays = "^1.8"
