CompatHelper: bump compat for ITensors to 0.8, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Arpack = "0.5.3"
 Combinatorics = "^1.0"
 ITensorMPS = "^0.2"
-ITensors = "^0.6"
+ITensors = "^0.6, 0.8"
 KrylovKit = "0.8.3"
 LinearAlgebra = "^1.8"
 Parameters = "0.12"
