--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "0.1.0"
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
+Observers = "338f10d5-c7f1-4033-a7d1-f9dec39bcaa0"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -18,10 +20,12 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 [compat]
 Arpack = "0.5.3"
 Combinatorics = "^1.0"
+DataFrames = "1.7.0"
 ITensorMPS = "^0.2"
 ITensors = "^0.6"
 KrylovKit = "0.8.3"
 LinearAlgebra = "^1.8"
+Observers = "^0.2"
 Parameters = "0.12"
 SparseArrays = "^1.8"
 Statistics = "^1.0"
