CompatHelper: bump compat for ITensors to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ Combinatorics = "^1.0"
 DataFrames = "1.7.0"
 HDF5 = "^0.17"
 ITensorMPS = "^0.2"
-ITensors = "^0.6"
+ITensors = "^0.6, 0.9"
 KrylovKit = "0.8.3"
 LinearAlgebra = "^1.8"
 Observers = "^0.2"
