--- a/Project.toml
+++ b/Project.toml
@@ -1,34 +1,39 @@
 name = "Schwinger"
 uuid = "085a87bc-4ab7-4abb-a9ba-31d0565e739e"
-authors = ["""Ross Dempsey\n <sdempsey@princeton.edu>"""]
 version = "0.1.0"
+authors = ["""Ross Dempsey\n <srossd@mit.edu>"""]
 
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MPSKit = "bb1c41ca-d63c-52ed-829e-0820dda26502"
+MPSKitLEMPO = "def4d40e-06d3-41a1-a405-61dcef04a768"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Observers = "338f10d5-c7f1-4033-a7d1-f9dec39bcaa0"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+PeriodicArrays = "343d6138-6384-4525-8bee-38906309ab36"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+TensorKit = "07d1fe3e-3e46-537d-9eac-e9e13d0d4cec"
 
 [compat]
-Arpack = "0.5.3"
-Combinatorics = "^1.0"
-DataFrames = "1.7.0"
-HDF5 = "^0.17"
-ITensorMPS = "^0.2"
-ITensors = "^0.6"
-KrylovKit = "0.8.3"
-LinearAlgebra = "^1.8"
-Observers = "^0.2"
-Parameters = "0.12"
-SparseArrays = "^1.8"
-Statistics = "^1.0"
-julia = "1.9"
+Arpack = "0.5.4"
+Combinatorics = "1.1.0"
+DataFrames = "1.8.1"
+ITensorMPS = "0.3.26"
+ITensors = "0.9.18"
+KrylovKit = "0.10.2"
+LinearAlgebra = "1.12.0"
+MPSKit = "0.13.8"
+MPSKitLEMPO = "0.1.0"
+Observers = "0.2.5"
+Parameters = "0.12.3"
+PeriodicArrays = "1.1.0"
+SparseArrays = "1.12.0"
+Statistics = "1.11.1"
+TensorKit = "0.15.3"
